--- a/Learn_Git/09_.gitignore忽略文件.md
+++ b/Learn_Git/09_.gitignore忽略文件.md
@@ -1,5 +1,7 @@
 # `.gitignore`忽略文件
 
+`.gitignore` 文件用于 Git 版本控制系统，用于指定哪些文件或目录不应被跟踪或提交到仓库中。以下是如何使用 `.gitignore` 文件的步骤：
+
 **作用：**让我们们忽略掉一些不应该被加入到版本库的文件，可以让我们的仓库体积更小，更加干净
 
 > *应该忽略哪些文件？*
@@ -47,3 +49,36 @@ Git默认不会把空文件夹添加到版本库
 
 - 感叹号 `!` 表示取反
 
+------
+
+## 使用方法
+
+1. **创建 `.gitignore` 文件**：
+   在你的 Git 仓库的根目录下创建一个名为 `.gitignore` 的文件（注意文件名前面的点号）。
+
+2. **编写忽略规则**：
+   在 `.gitignore` 文件中，你可以指定要忽略的文件或目录的模式。每一行表示一个模式。例如：
+
+   - 忽略所有 `.log` 文件：`*.log`
+   - 忽略名为 `node_modules` 的目录：`node_modules/`
+   - 忽略所有 `.swp` 结尾的文件（如 Vim 的交换文件）：`*.swp`
+
+   你还可以使用通配符、目录分隔符 `/` 和否定模式 `!` 来定义更复杂的规则。
+
+3. **保存并关闭文件**：
+   保存 `.gitignore` 文件后，Git 将开始使用这些规则来忽略指定的文件或目录。
+
+4. **注意已跟踪的文件**：
+   如果某个文件已经被 Git 跟踪（即已经提交到仓库中），那么仅仅在 `.gitignore` 文件中添加该文件的模式是不会使其被忽略的。要忽略这样的文件，你需要先从 Git 的跟踪列表中移除它，可以使用 `git rm --cached <file>` 命令，然后提交这个更改。
+
+5. **应用到子目录**：
+   如果你希望 `.gitignore` 文件中的规则应用到子目录，你可以直接使用文件名或目录名（相对于 `.gitignore` 文件的位置）。例如，要忽略所有子目录中的 `.log` 文件，只需写 `*.log` 即可。
+
+6. **分享 `.gitignore` 文件**：
+   由于 `.gitignore` 文件通常与项目设置相关，因此建议将其添加到版本控制中，以便其他开发者也可以利用相同的忽略规则。
+
+7. **检查忽略效果**：
+   使用 `git status` 命令可以查看哪些文件被 Git 跟踪，哪些文件被忽略。被忽略的文件不会出现在这个列表中。
+
+8. **全局 `.gitignore` 文件**：
+   Git 还支持全局 `.gitignore` 文件，可以应用于所有 Git 仓库。这通常用于忽略操作系统自动生成的文件（如 `Thumbs.db` 或 `.DS_Store`）。要设置全局 `.gitignore` 文件，可以在你的主目录下创建一个名为 `.gitignore_global` 的文件（名称可以自定义），然后运行 `git config --global core.excludesfile ~/.gitignore_global` 命令来指定这个文件。注意，这个全局文件不会跟踪已经提交到仓库中的文件。
