--- a/Learn_Git/09_.gitignore忽略文件.md
+++ b/Learn_Git/09_.gitignore忽略文件.md
@@ -82,3 +82,35 @@ Git默认不会把空文件夹添加到版本库
 
 8. **全局 `.gitignore` 文件**：
    Git 还支持全局 `.gitignore` 文件，可以应用于所有 Git 仓库。这通常用于忽略操作系统自动生成的文件（如 `Thumbs.db` 或 `.DS_Store`）。要设置全局 `.gitignore` 文件，可以在你的主目录下创建一个名为 `.gitignore_global` 的文件（名称可以自定义），然后运行 `git config --global core.excludesfile ~/.gitignore_global` 命令来指定这个文件。注意，这个全局文件不会跟踪已经提交到仓库中的文件。
+
+------
+
+下面是一些 `.gitignore` 文件的示例规则：
+
+```
+# 忽略所有 .log 文件
+*.log
+
+# 忽略名为 temp 的目录
+temp/
+
+# 忽略所有 .txt 文件，但是名为 important.txt 的文件除外
+*.txt
+!important.txt
+
+# 忽略所有名为 build 的目录及其子目录和文件，无论它们在哪个目录下
+**/build/
+
+# 忽略所有名为 backup.zip 的文件，无论它们在哪个目录下
+**/backup.zip
+
+# 忽略所有在根目录下的 .md 文件，但是不排除子目录中的 .md 文件
+/*.md
+
+# 忽略名字中只有一个字符的文件，比如 a.txt, b.doc 等
+?.*
+
+# 忽略所有以数字或小写字母 a 开头的 .txt 文件
+[0-9a].txt
+```
+
